2009-03-16  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeSelection.cs: use new Adapter prop on NodeStore.
	* gtk/NodeStore.cs: some encapsulation rework.
	* gtk/NodeView.cs: use new Adapter prop on NodeStore. new methods
	to support manipulation of the view by TreeNode, like scrolling
	and cell bounds lookups.  
	* gtk/TreeView.cs: use new Adapter prop on NodeStore.
	* doc/en/Gtk/NodeView.xml: new doc updates. 
	Patch provided by Vladimir Giszpenc.  [Fixes #480067]

2009-03-07  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: add --disable-glade-sharp configure option
	to explicitly disable the conditional build.  [Fixes #423131]

2009-03-04  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/NodeStore.cs: reimplement NodeStore as a managed TreeModel using GInterface implementation
	* gtk/glue/nodestore.c: kill

2009-02-27  Stephane Delcroix  <sdelcroix@novell.com>

	* gdk/Gdk.metadata:
	* gdk/PixbufFormat.custom:
	* gdk/Makefile.am: deprecate IsDisabled in favor of the Disabled
	property

2009-02-27  Stephane Delcroix  <sdelcroix@novell.com>

	* gdk/Gdk.metadata: fix GdkPixbufFormat mime_types and extensions

2009-02-24  Christian Hoff  <christian_hoff@gmx.net>

	* glib/Value.cs: Change the pad fields handling again as the 
	previous approach didn't work on Win32.   [Fixes #478578]

2009-02-17  Christian Hoff  <christian_hoff@gmx.net>

	* sample/gtk-gio/MountOperation.cs:
	* gtk/Builder.custom:
	* glib/Value.cs: Resurrect build for MS .NET Framework

2009-02-06  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Gtk.metadata: Fix TreeModel.EmitRowsReordered signature

2009-01-29  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs: generate a finalizer for classes which
	have free or unref methods and ensure it runs on the gui thread.
	* glib/Opaque.cs:  remove finalize handling.
	Fixes a 'resurrection' issue with the previous 419777 fix.

2009-01-29  Andrés G. Aragoneses  <aaragoneses@novell.com>
