@@ -1,3 +1,9 @@
+2009-03-17  Christian Hoff  <christian_hoff@gmx.net>
+
+	* gdk/Property.custom: add new overloads to the Get method
+	for the most common property types
+	* gdk/Global.custom: Use the new overloads of Property.Get instead of glue
+
 2009-03-16  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/NodeSelection.cs: use new Adapter prop on NodeStore.
